# ELITE360

./: .dockerignore  .env.example  .gitignore  .replit  DEPLOYMENT.md  Dockerfile  README.md  main.py  pyproject.toml  render.yaml  replit.md
.github/workflows/: render-redeploy.yml
app/api/: accounting.py  activities.py  admin.py  ai.py  analysis.py  assets.py  attachments.py  auth.py  billing.py  budget.py  crm.py  dashboard.py  dispatch.py  documents.py  fleet.py  hr.py  inspections.py  integrations.py  map_views.py  materials.py  onboarding.py  orgs.py  payroll.py  projects.py  reports.py  safety.py  screening.py  task_types.py  tasks.py  work_packages.py
app/core/: auth.py  config.py
app/db/: session.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: ai_service.py  import_service.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
scripts/: redeploy-render.sh
